--- a/src/app/body/body.component.scss
+++ b/src/app/body/body.component.scss
@@ -6,7 +6,7 @@
     position: relative;
     top: 0;
     transition: all 0.5s ease;
-    background: #F4F7FA;
+    background: #FFFFFF;
     padding: 3rem;
 }
 
