--- a/src/app/items/items.component.scss
+++ b/src/app/items/items.component.scss
@@ -1,12 +1,12 @@
-/* inventory-list.component.scss */
 .inventory-container {
     padding: 20px;
-    background: #fff;
+    background: #F4F7FA;
+    border-radius: 10px;
 
     .header {
         margin-bottom: 24px;
 
-        h2 {
+        h1 {
             font-size: 24px;
             font-weight: 600;
             margin-bottom: 4px;
@@ -14,7 +14,7 @@
 
         .subtitle {
             color: #666;
-            font-size: 14px;
+            font-size: 16px;
         }
     }
 
@@ -92,7 +92,7 @@
             }
 
             th {
-                background-color: #f9f9f9;
+                background-color: #FFFFFF;
                 font-weight: 600;
             }
 
