--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -62,7 +62,9 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-self: center;
         gap: 12px;
+        width: 50%;
 
         i {
             font-size: 32px;
