--- a/src/app/items/items.component.scss
+++ b/src/app/items/items.component.scss
@@ -41,7 +41,7 @@
                 width: 100%;
                 padding: 8px 8px 8px 40px;
                 border: 1px solid #ddd;
-                border-radius: 4px;
+                border-radius: 20px;
                 font-size: 14px;
 
                 &::placeholder {
@@ -86,9 +86,11 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            justify-self: center;
             padding: 48px 0;
             background: #FFFFFF;
             border-radius: 4px;
+            width: 50%;
 
             i {
                 font-size: 32px;
